user.css
:root {
  --sidebar-y-offset: 10px;
  --border-radius-1: 10px;
  --border-radius-2: 8px;
  --border-radius-3: 4px;
  --scrollbars: unset;
  --green: #1db954;
  --spice-main: transparent;
  --spice-misc: rgba(30, 30, 30, 0.8);
  --spice-player: rgba(30, 30, 30, 0.4);
  --bg: url(--spice-wallpaper);
}
/*
 Set the wallpaper to the one matching your color scheme
 Source: https://wallpapercave.com/wp/wp5003466.jpg
 Purple: https://github.com/Motschen/Retroblur/blob/main/assets/background_purple.jpg?raw=true
 Red: https://github.com/Motschen/Retroblur/blob/main/assets/background_red.jpg?raw=true
 Green: https://github.com/Motschen/Retroblur/blob/main/assets/background_green.jpg?raw=true
 Yellow: https://github.com/Motschen/Retroblur/blob/main/assets/background_yellow.jpg?raw=true
 Blue: https://github.com/Motschen/Retroblur/blob/main/assets/background_blue.jpg?raw=true
 Beach (Blue): https://wallpapercave.com/wp/wp5922621.jpg
 Forest (Green): https://i.imgur.com/hnpaDeR.jpg
 */
body {
    background-image: url("https://github.com/Motschen/Retroblur/blob/main/assets/background_purple.jpg?raw=true") !important;
    background-repeat: no-repeat;
    background-size: 100%;
}
/* Playing track's title in playlist */
.main-trackList-trackListRow.main-trackList-active .main-trackList-rowTitle, .main-trackList-trackListRow.main-trackList-active .main-trackList-rowMarker {
  color: var(--spice-subtext);
}
.main-trackList-trackListRow.main-trackList-active:hover .main-trackList-rowTitle {
  color: var(--spice-button);
}

/* Explicit content black */
.main-tag-container {
  color: black;
}

/* Disable upgrade button */
.main-topBar-UpgradeButton {
  display: none;
}

/* Fix the navbar icons not showing when selected */
.home-active-icon, .search-active-icon, .collection-active-icon {
  color: white;
  fill: white;
}

/* Make the friend list transparent and blured */
.main-buddyFeed-buddyFeedRoot {
  background-color: rgba(30, 30, 30, 0.4);
  backdrop-filter: blur(14px) !important;
}

/* Added style to the native spotify's lyrics screen */
.lyrics-lyrics-background {
  background-color: rgba(30, 30, 30, 0.4)
}
.lyrics-lyrics-contentContainer {
  --lyrics-color-active: #ffde00 !important;
  --lyrics-color-inactive: #D56F80 !important;
  --lyrics-color-background: #1e1e1e !important;
  backdrop-filter: blur(14px) !important;
}

/* Fixed elapsed time overlapping with the mic button */
.playback-bar__progress-time, .playback-bar__progress-time-elapsed, .main-playbackBarRemainingTime-container {
  right: 265px;
}

/* Make the selected track in playlist more readable */
div[aria-selected="true"] > div > div.main-trackList-rowSectionStart > div > div, div[aria-selected="true"]:hover > div > div.main-trackList-rowSectionStart > div > div {
  color: var(--spice-text) !important;
}

/* Fixed navbar overlaping on top Spotify's menu in Windows */
.main-navBar-entryPoints {
  margin-top: 20px;
}
.main-repeatButton-button, .main-shuffleButton-button {
  color: var(--spice-subtext);
  opacity: 70%;
}
.X1lXSiVj0pzhQCUo_72A, .X1lXSiVj0pzhQCUo_72A:hover {
  color: var(--spice-button);
}
.encore-dark-theme {
  --background-base: var(--spice-main);
}
.gHYQaG, .iaAUvZ {
  /*Fix playlist play button when downloaded from Spicetify Marketplace*/
  background-color: var(--spice-button) !important;
}
.iaAUvZ {
  transform: translate3d(9px, 0px, 0px);
  min-inline-size: auto;
}
.eSMjmiD29Ox35O95waw6:after, .eSMjmiD29Ox35O95waw6:before {
  background: transparent !important;
}
.McwcCfBLSuXa5UDU1IMw {
    display: none;
}
.n87ifzfQlmGX8vkeYGDL {
    visibility: hidden;
}
.hW9km7ku6_iggdWDR_Lg {
    --lyrics-color-background: transparent !important;
    --lyrics-color-active: var(--spice-text) !important;
    --lyrics-color-inactive: var(--spice-subtext) !important;
    --lyrics-color-messaging: var(--spice-subtext) !important;
}
.lEsg6gi7HowFgzWl_634 {
    --lyrics-color-background: rgba(30, 30, 30, 0.4) !important;
}
.main-connectBar-connectBar {
    border-radius: 8px;
    height: 28px;
    padding: 8px !important;
    position: absolute;
    right: 16px;
    bottom: 106px;
}
.main-connectBar-connectBar, .iUSAh1wdhXLk9hHSbkCA.hsrxlVHxK0zZrgarkxuA:after {
    filter: drop-shadow(0 0 6px var(--spice-button)) brightness(50%) !important;
    color: black;
    opacity: 95%;
}
.iUSAh1wdhXLk9hHSbkCA.hsrxlVHxK0zZrgarkxuA:after {
    transform: scaleY(-1);
    bottom: 67px;
}
.yaVzc4bseRnztmfRv_u3, .volume-bar .progress-bar__slider {
    filter: drop-shadow(0 0 6px var(--spice-button)) !important;
}
.main-view-container, .Root__main-view, .os-host-overflow, .os-resize-observer, .os-resize-observer-host, .os-host-overflow>.os-padding {
    overflow: hidden !important;
}
.spotify__container--is-desktop:not(.fullscreen) .main-navBar-entryPoints, .main-navBar-navBar, .main-rootlist-rootlistPlaylistsScrollNode, .main-createPlaylistButton-button {
    padding-top: var(--sidebar-y-offset);
}
.Root__now-playing-bar {
    backdrop-filter: blur(14px) !important;
    background-color: rgba(30, 30, 30, 0.6) !important;
}
@keyframes fadingGlow {
  from {} to { filter: drop-shadow(0 0 6px var(--spice-button)); }
}
@keyframes fadingGlowWhite {
  from {} to { filter: drop-shadow(0 0 6px); }
}
.gSLhUO:hover, .main-playButton-PlayButton.main-playButton-primary:hover, .main-pageErrorTemplate-errorButton:hover, div.GlueDropTarget.personal-library >*.active:hover, .main-rootlist-rootlistItemLink.main-rootlist-rootlistItemLinkActive:hover, .main-navBar-navBarLinkActive:hover, .control-button-heart:hover, .gHYQaG:hover, .iaAUvZ:hover {
    animation: fadingGlow 1s ease 0.5 forwards !important;
}
a:hover, .main-trackList-rowPlayPauseButton:hover, svg:hover {
    animation: fadingGlowWhite 1s ease 0.5 forwards;
}
@keyframes speaker {
  0% { clip-path: inset(0% 50% 0% 0%) }
  50% { clip-path: inset(0% 0% 0% 0%) }
  51% { clip-path: inset(0% 0% 0% 0%) }
}
@keyframes speaker2 {
  0% { visibility: visible }
  1% { visibility: hidden }
  51% { visibility: hidden }
}
/* ... */

